make work with openjdk-13 and openjfx-13